# airbnb-de-project-aws-dbt-snowflake-airflow-

./: .gitignore  README.md  airbnb_erd (1).html  profiles_example.yml  pyproject.toml
airbnb_de_project_dbt/: Snowflake code.sql  dbt_project.yml
airbnb_de_project_dbt/macros/: generate_schema_name.sql
airbnb_de_project_dbt/models/bronze/: bronze_availability_calendar.sql  bronze_bookings.sql  bronze_guests.sql  bronze_hosts.sql  bronze_listing_events.sql  bronze_listings.sql  bronze_reviews.sql  schema.yml  sources.yml
airbnb_de_project_dbt/models/gold/: gold_dim_guests.sql  gold_dim_hosts.sql  gold_dim_listings.sql  gold_fct_bookings.sql  gold_fct_listing_events.sql  gold_fct_reviews.sql  gold_fct_sessions.sql  gold_obt_bookings.sql  schema.yml
airbnb_de_project_dbt/models/silver/: quarantine_invalid_bookings.sql  schema.yml  silver_bookings.sql  (+6 more)
airbnb_de_project_dbt/seeds/: dim_date.csv
airbnb_de_project_dbt/snapshots/: hosts_snapshot.sql  listings_snapshot.sql
airbnb_de_project_dbt/tests/: assert_booking_dates_valid.sql  assert_booking_disposition_reconciles.sql  assert_booking_host_matches_listing.sql  assert_guest_phone_e164.sql  assert_ratings_in_range.sql  assert_revenue_positive.sql  assert_review_roles_valid.sql  assert_reviews_reference_bookings.sql  assert_scd_validity_windows_do_not_overlap.sql  assert_session_funnel_consistent.sql  assert_silver_hosts_no_duplicates.sql  assert_silver_listings_no_duplicates.sql
airflow_dags/: airbnb_dbt_pipeline.py
lambda/: generator.py  lambda_handler.py
tests/: test_generator.py  test_lambda_handler.py
